better tabs design

--- a/override-local.css
+++ b/override-local.css
@@ -6,6 +6,16 @@
     height:43px;
 }
 
+.utteranceContainer__filterWrapper .ds-tab.ds-tab--horizontal, .objectColumnContainer > .ds-tabs > .ds-tab.ds-tab--horizontal{
+    border:none;
+    box-shadow:none;
+}
+
+.utteranceContainer__filterWrapper .ds-tab.ds-tab--horizontal.ds-tab--isActive, .objectColumnContainer > .ds-tabs > .ds-tab.ds-tab--horizontal.ds-tab--isActive{
+    border-bottom:5px solid blue;
+}
+
+
 /* .pill--light{
     background-color:rgb(244, 214, 233);
 } */
