--- a/override-local.css
+++ b/override-local.css
@@ -9,7 +9,7 @@
 .DS-button.activated{
     background:#f4d6e9;
     border-color:#eeb9de;
-    color:#000;
+    color:#3f5597;
 }
 
 /* .utteranceContainer__filterWrapper .ds-tab.ds-tab--horizontal, .objectColumnContainer > .ds-tabs > .ds-tab.ds-tab--horizontal{
