--- a/override-local.css
+++ b/override-local.css
@@ -79,6 +79,13 @@
     top:-10px;
 }
 
+#fluid-layout-overlay-portal-1 > div > div > div > div.utteranceContainer__filterWrapper > div > div.filters.ds-tabs.ds-tabs--horizontal > div.predicateWrapper__pills > div#data_tab{
+    border-bottom-color:#fff;
+    box-shadow:0px 11px 19px -1px #97a3c6;
+    position:relative;
+    top:0px;
+}
+
 .stack .genericPredicatePill{
     display:flex;
 }
@@ -174,6 +181,32 @@
 }
 
 
+.DS-button__tercery{
+    border:1px solid #bac0de;
+    color:#3f5597;
+    background:#fff;
+}
+
+.DS-button__tercery:hover{
+    border:1px solid #eeb9de;
+    background:#fff;
+}
+
+
+.intentPanel__return h2{
+    display:none !important;
+}
+
+.intentPanel .intentPanel__pinnedObjectPath{
+    margin-left:40px;
+    margin-top:-20px;
+    width:80%;
+}
+
+.intentPanel .intentPanel__pinnedObjectPath input{
+    margin-left:-10px;
+    padding:10px;
+}
 
 /* .ds-tab{
     background:#fff;
