--- a/override-local.css
+++ b/override-local.css
@@ -128,7 +128,7 @@
 
 .nlgFilter__content{
     color:#000;
-    font-size:0.9em;
+    background-color:oldlace !important;
 }
 
 .fluidLayout__handles__left.prompt{
